<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".PrescriptionEditActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline72"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline73"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline74"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline86"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline69"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.63" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline76"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline77"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline79"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline81"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline82"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline83"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline84"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <include layout="@layout/customactionbar"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|start"
        android:text="@string/label_drugname"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline79"
        app:layout_constraintEnd_toStartOf="@+id/guideline75"
        app:layout_constraintStart_toStartOf="@+id/guideline74"
        app:layout_constraintTop_toTopOf="@+id/guideline78" />

    <EditText
        android:id="@+id/txtDrugName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/label_drugname"
        android:inputType="textPersonName"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/guideline79"
        app:layout_constraintEnd_toStartOf="@+id/guideline76"
        app:layout_constraintStart_toStartOf="@+id/guideline75"
        app:layout_constraintTop_toTopOf="@+id/guideline78" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|start"
        android:text="@string/label_drugamount"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline80"
        app:layout_constraintEnd_toStartOf="@+id/guideline75"
        app:layout_constraintStart_toStartOf="@+id/guideline74"
        app:layout_constraintTop_toTopOf="@+id/guideline79" />

    <EditText
        android:id="@+id/txtDrugAmount"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/hint_drugamount"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guideline80"
        app:layout_constraintEnd_toStartOf="@+id/guideline76"
        app:layout_constraintStart_toStartOf="@+id/guideline75"
        app:layout_constraintTop_toTopOf="@+id/guideline79" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|start"
        android:text="@string/label_drugfrequency"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline81"
        app:layout_constraintEnd_toStartOf="@+id/guideline75"
        app:layout_constraintStart_toStartOf="@+id/guideline74"
        app:layout_constraintTop_toTopOf="@+id/guideline80" />

    <EditText
        android:id="@+id/txtDrugFrequency"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/hint_drugfrequency"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guideline81"
        app:layout_constraintEnd_toStartOf="@+id/guideline76"
        app:layout_constraintStart_toStartOf="@+id/guideline75"
        app:layout_constraintTop_toTopOf="@+id/guideline80" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|start"
        android:text="@string/label_drugstartdate"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline82"
        app:layout_constraintEnd_toStartOf="@+id/guideline75"
        app:layout_constraintStart_toStartOf="@+id/guideline74"
        app:layout_constraintTop_toTopOf="@+id/guideline81" />

    <EditText
        android:id="@+id/txtDrugStartDate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="date"
        android:hint="@string/label_drugstartdate"
        app:layout_constraintBottom_toTopOf="@+id/guideline82"
        app:layout_constraintEnd_toStartOf="@+id/guideline76"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline75"
        app:layout_constraintTop_toTopOf="@+id/guideline81"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|start"
        android:text="@string/label_drugenddate"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline83"
        app:layout_constraintEnd_toStartOf="@+id/guideline75"
        app:layout_constraintStart_toStartOf="@+id/guideline74"
        app:layout_constraintTop_toTopOf="@+id/guideline82" />

    <EditText
        android:id="@+id/txtDrugEndDate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="date"
        android:hint="@string/label_drugenddate"
        app:layout_constraintBottom_toTopOf="@+id/guideline83"
        app:layout_constraintEnd_toStartOf="@+id/guideline76"
        app:layout_constraintStart_toStartOf="@+id/guideline75"
        app:layout_constraintTop_toTopOf="@+id/guideline82" />

    <Button
        android:id="@+id/btnPrescriptionSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/saveGreen"
        android:onClick="selectPrescriptionTask"
        android:text="@string/button_save"
        app:layout_constraintBottom_toTopOf="@+id/guideline72"
        app:layout_constraintEnd_toStartOf="@+id/guideline69"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline87"
        app:layout_constraintTop_toTopOf="@+id/guideline84"
        app:layout_constraintVertical_bias="0.454" />

    <Button
        android:id="@+id/btnPrescriptionCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/cancelBlueLight"
        android:text="@string/button_cancel"
        android:onClick="selectPrescriptionTask"
        app:layout_constraintBottom_toTopOf="@+id/guideline72"
        app:layout_constraintEnd_toStartOf="@+id/guideline76"
        app:layout_constraintStart_toStartOf="@+id/guideline85"
        app:layout_constraintTop_toTopOf="@+id/guideline84" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline87"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

</androidx.constraintlayout.widget.ConstraintLayout>